Fix: remove extra margin on nav bar. Add padding-bottom to Start page

--- a/earahearing-client/src/components/navigation/nav.css
+++ b/earahearing-client/src/components/navigation/nav.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding-inline: .5em;
     padding-block: .75em;
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
    
 }
 
