--- a/earahearing-client/src/pages/start-page/start-page.css
+++ b/earahearing-client/src/pages/start-page/start-page.css
@@ -1,7 +1,8 @@
 .start-page-wrapper {
-    padding-bottom: 2.5em;
+    padding-bottom: 5.5em;
     overflow: hidden;
     background-color: var(--light-background-200);
+
 }
 
 .hero--image {
